After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792231 - fontmap: fix warnings from recent g_object_ref() changes
fontmap: fix warnings from recent g_object_ref() changes
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2018-01-05 07:12 UTC by Christian Hergert
Modified: 2018-01-05 20:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fontmap: fix warnings from recent g_object_ref() changes (1.06 KB, patch)
2018-01-05 07:12 UTC, Christian Hergert
committed Details | Review

Description Christian Hergert 2018-01-05 07:12:51 UTC
Fixes the recent typeof() changes from g_object_ref().
Comment 1 Christian Hergert 2018-01-05 07:12:54 UTC
Created attachment 366357 [details] [review]
fontmap: fix warnings from recent g_object_ref() changes
Comment 2 Matthias Clasen 2018-01-05 18:50:11 UTC
Review of attachment 366357 [details] [review]:

feels backwards to me to put the cases on the inside, but ok
Comment 3 Christian Hergert 2018-01-05 20:32:56 UTC
Attachment 366357 [details] pushed as 3ccf578 - fontmap: fix warnings from recent g_object_ref() changes