fontmap: fix warnings from recent g_object_ref() changes

https://bugzilla.gnome.org/show_bug.cgi?id=792231